Kompilator/parser.output
State 107 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: nizFunkcija Blok '.'
    2        | Blok '.'

    3 nizFunkcija: Funkcija1 ';' nizFunkcija
    4            | Funkcija1 ';'

    5 Funkcija1: funkcija_token Deklaracija Blok

    6 nizParametara: nizParametara ',' id_token
    7              | id_token

    8 Deklaracija: imeFunkcije_token '(' ')'
    9            | imeFunkcije_token '(' nizParametara ')'

   10 Blok: pocetak_token NizNaredbi kraj_token

   11 NizNaredbi: NizNaredbi ';' Naredba1
   12           | Naredba1

   13 Naredba1: ispisi_token '(' AritmIzraz ')'
   14         | ispisi_token '(' tekst_token ')'
   15         | id_token '=' AritmIzraz
   16         | unesi_token '(' id_token ')'
   17         | ako_token AritmIzraz onda_token ':' Naredba1
   18         | ako_token AritmIzraz onda_token ':' Naredba1 inace_token ':' Naredba1
   19         | Blok
   20         | dok_token AritmIzraz radi_token ':' Naredba1
   21         | ponavljaj_token ':' Naredba1 dok_token AritmIzraz
   22         | za_token '(' Inic ';' AritmIzraz ';' Inic ')' Naredba1
   23         | imeFunkcije_token '(' ')'
   24         | imeFunkcije_token '(' nizIzraza ')'
   25         | '\n'
   26         | num_token
   27         | vrati_token AritmIzraz

   28 Inic: id_token '=' AritmIzraz

   29 AritmIzraz: AritmIzraz '+' AritmIzraz
   30           | AritmIzraz '-' AritmIzraz
   31           | AritmIzraz '*' AritmIzraz
   32           | AritmIzraz '/' AritmIzraz
   33           | '-' AritmIzraz
   34           | AritmIzraz mod_token AritmIzraz
   35           | AritmIzraz '<' AritmIzraz
   36           | AritmIzraz '>' AritmIzraz
   37           | AritmIzraz jednako_token AritmIzraz
   38           | AritmIzraz razlicito_token AritmIzraz
   39           | AritmIzraz veceJednako_token AritmIzraz
   40           | AritmIzraz manjeJednako_token AritmIzraz
   41           | '(' AritmIzraz ')'
   42           | imeFunkcije_token '(' ')'
   43           | imeFunkcije_token '(' nizIzraza ')'
   44           | num_token
   45           | id_token

   46 nizIzraza: nizIzraza ',' AritmIzraz
   47          | AritmIzraz


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 25
'(' (40) 8 9 13 14 16 22 23 24 41 42 43
')' (41) 8 9 13 14 16 22 23 24 41 42 43
'*' (42) 31
'+' (43) 29
',' (44) 6 46
'-' (45) 30 33
'.' (46) 1 2
'/' (47) 32
':' (58) 17 18 20 21
';' (59) 3 4 11 22
'<' (60) 35
'=' (61) 15 28
'>' (62) 36
error (256)
pocetak_token (258) 10
kraj_token (259) 10
ispisi_token (260) 13 14
mod_token (261) 34
unesi_token (262) 16
funkcija_token (263) 5
za_token (264) 22
ponavljaj_token (265) 21
ako_token (266) 17 18
onda_token (267) 17 18
dok_token (268) 20 21
radi_token (269) 20
jednako_token (270) 37
inace_token (271) 18
vrati_token (272) 27
num_token (273) 26 44
tekst_token (274) 14
imeFunkcije_token (275) 8 9 23 24 42 43
id_token (276) 6 7 15 16 28 45
veceJednako_token (277) 39
manjeJednako_token (278) 40
razlicito_token (279) 38
UMINUS (280)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
Program (41)
    on left: 1 2, on right: 0
nizFunkcija (42)
    on left: 3 4, on right: 1 3
Funkcija1 (43)
    on left: 5, on right: 3 4
nizParametara (44)
    on left: 6 7, on right: 6 9
Deklaracija (45)
    on left: 8 9, on right: 5
Blok (46)
    on left: 10, on right: 1 2 5 19
NizNaredbi (47)
    on left: 11 12, on right: 10 11
Naredba1 (48)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27, on right:
    11 12 17 18 20 21 22
Inic (49)
    on left: 28, on right: 22
AritmIzraz (50)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45, on right:
    13 15 17 18 20 21 22 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 46 47
nizIzraza (51)
    on left: 46 47, on right: 24 43 46


state 0

    0 $accept: . Program $end

    pocetak_token   shift, and go to state 1
    funkcija_token  shift, and go to state 2

    Program      go to state 3
    nizFunkcija  go to state 4
    Funkcija1    go to state 5
    Blok         go to state 6


state 1

   10 Blok: pocetak_token . NizNaredbi kraj_token

    pocetak_token      shift, and go to state 1
    ispisi_token       shift, and go to state 7
    unesi_token        shift, and go to state 8
    za_token           shift, and go to state 9
    ponavljaj_token    shift, and go to state 10
    ako_token          shift, and go to state 11
    dok_token          shift, and go to state 12
    vrati_token        shift, and go to state 13
    num_token          shift, and go to state 14
    imeFunkcije_token  shift, and go to state 15
    id_token           shift, and go to state 16
    '\n'               shift, and go to state 17

    Blok        go to state 18
    NizNaredbi  go to state 19
    Naredba1    go to state 20


state 2

    5 Funkcija1: funkcija_token . Deklaracija Blok

    imeFunkcije_token  shift, and go to state 21

    Deklaracija  go to state 22


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 23


state 4

    1 Program: nizFunkcija . Blok '.'

    pocetak_token  shift, and go to state 1

    Blok  go to state 24


state 5

    3 nizFunkcija: Funkcija1 . ';' nizFunkcija
    4            | Funkcija1 . ';'

    ';'  shift, and go to state 25


state 6

    2 Program: Blok . '.'

    '.'  shift, and go to state 26


state 7

   13 Naredba1: ispisi_token . '(' AritmIzraz ')'
   14         | ispisi_token . '(' tekst_token ')'

    '('  shift, and go to state 27


state 8

   16 Naredba1: unesi_token . '(' id_token ')'

    '('  shift, and go to state 28


state 9

   22 Naredba1: za_token . '(' Inic ';' AritmIzraz ';' Inic ')' Naredba1

    '('  shift, and go to state 29


state 10

   21 Naredba1: ponavljaj_token . ':' Naredba1 dok_token AritmIzraz

    ':'  shift, and go to state 30


state 11

   17 Naredba1: ako_token . AritmIzraz onda_token ':' Naredba1
   18         | ako_token . AritmIzraz onda_token ':' Naredba1 inace_token ':' Naredba1

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 36


state 12

   20 Naredba1: dok_token . AritmIzraz radi_token ':' Naredba1

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 37


state 13

   27 Naredba1: vrati_token . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 38


state 14

   26 Naredba1: num_token .

    $default  reduce using rule 26 (Naredba1)


state 15

   23 Naredba1: imeFunkcije_token . '(' ')'
   24         | imeFunkcije_token . '(' nizIzraza ')'

    '('  shift, and go to state 39


state 16

   15 Naredba1: id_token . '=' AritmIzraz

    '='  shift, and go to state 40


state 17

   25 Naredba1: '\n' .

    $default  reduce using rule 25 (Naredba1)


state 18

   19 Naredba1: Blok .

    $default  reduce using rule 19 (Naredba1)


state 19

   10 Blok: pocetak_token NizNaredbi . kraj_token
   11 NizNaredbi: NizNaredbi . ';' Naredba1

    kraj_token  shift, and go to state 41
    ';'         shift, and go to state 42


state 20

   12 NizNaredbi: Naredba1 .

    $default  reduce using rule 12 (NizNaredbi)


state 21

    8 Deklaracija: imeFunkcije_token . '(' ')'
    9            | imeFunkcije_token . '(' nizParametara ')'

    '('  shift, and go to state 43


state 22

    5 Funkcija1: funkcija_token Deklaracija . Blok

    pocetak_token  shift, and go to state 1

    Blok  go to state 44


state 23

    0 $accept: Program $end .

    $default  accept


state 24

    1 Program: nizFunkcija Blok . '.'

    '.'  shift, and go to state 45


state 25

    3 nizFunkcija: Funkcija1 ';' . nizFunkcija
    4            | Funkcija1 ';' .

    funkcija_token  shift, and go to state 2

    $default  reduce using rule 4 (nizFunkcija)

    nizFunkcija  go to state 46
    Funkcija1    go to state 5


state 26

    2 Program: Blok '.' .

    $default  reduce using rule 2 (Program)


state 27

   13 Naredba1: ispisi_token '(' . AritmIzraz ')'
   14         | ispisi_token '(' . tekst_token ')'

    num_token          shift, and go to state 31
    tekst_token        shift, and go to state 47
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 48


state 28

   16 Naredba1: unesi_token '(' . id_token ')'

    id_token  shift, and go to state 49


state 29

   22 Naredba1: za_token '(' . Inic ';' AritmIzraz ';' Inic ')' Naredba1

    id_token  shift, and go to state 50

    Inic  go to state 51


state 30

   21 Naredba1: ponavljaj_token ':' . Naredba1 dok_token AritmIzraz

    pocetak_token      shift, and go to state 1
    ispisi_token       shift, and go to state 7
    unesi_token        shift, and go to state 8
    za_token           shift, and go to state 9
    ponavljaj_token    shift, and go to state 10
    ako_token          shift, and go to state 11
    dok_token          shift, and go to state 12
    vrati_token        shift, and go to state 13
    num_token          shift, and go to state 14
    imeFunkcije_token  shift, and go to state 15
    id_token           shift, and go to state 16
    '\n'               shift, and go to state 17

    Blok      go to state 18
    Naredba1  go to state 52


state 31

   44 AritmIzraz: num_token .

    $default  reduce using rule 44 (AritmIzraz)


state 32

   42 AritmIzraz: imeFunkcije_token . '(' ')'
   43           | imeFunkcije_token . '(' nizIzraza ')'

    '('  shift, and go to state 53


state 33

   45 AritmIzraz: id_token .

    $default  reduce using rule 45 (AritmIzraz)


state 34

   33 AritmIzraz: '-' . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 54


state 35

   41 AritmIzraz: '(' . AritmIzraz ')'

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 55


state 36

   17 Naredba1: ako_token AritmIzraz . onda_token ':' Naredba1
   18         | ako_token AritmIzraz . onda_token ':' Naredba1 inace_token ':' Naredba1
   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz

    mod_token           shift, and go to state 56
    onda_token          shift, and go to state 57
    jednako_token       shift, and go to state 58
    '<'                 shift, and go to state 59
    '>'                 shift, and go to state 60
    veceJednako_token   shift, and go to state 61
    manjeJednako_token  shift, and go to state 62
    razlicito_token     shift, and go to state 63
    '+'                 shift, and go to state 64
    '-'                 shift, and go to state 65
    '*'                 shift, and go to state 66
    '/'                 shift, and go to state 67


state 37

   20 Naredba1: dok_token AritmIzraz . radi_token ':' Naredba1
   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz

    mod_token           shift, and go to state 56
    radi_token          shift, and go to state 68
    jednako_token       shift, and go to state 58
    '<'                 shift, and go to state 59
    '>'                 shift, and go to state 60
    veceJednako_token   shift, and go to state 61
    manjeJednako_token  shift, and go to state 62
    razlicito_token     shift, and go to state 63
    '+'                 shift, and go to state 64
    '-'                 shift, and go to state 65
    '*'                 shift, and go to state 66
    '/'                 shift, and go to state 67


state 38

   27 Naredba1: vrati_token AritmIzraz .
   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz

    mod_token           shift, and go to state 56
    jednako_token       shift, and go to state 58
    '<'                 shift, and go to state 59
    '>'                 shift, and go to state 60
    veceJednako_token   shift, and go to state 61
    manjeJednako_token  shift, and go to state 62
    razlicito_token     shift, and go to state 63
    '+'                 shift, and go to state 64
    '-'                 shift, and go to state 65
    '*'                 shift, and go to state 66
    '/'                 shift, and go to state 67

    $default  reduce using rule 27 (Naredba1)


state 39

   23 Naredba1: imeFunkcije_token '(' . ')'
   24         | imeFunkcije_token '(' . nizIzraza ')'

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35
    ')'                shift, and go to state 69

    AritmIzraz  go to state 70
    nizIzraza   go to state 71


state 40

   15 Naredba1: id_token '=' . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 72


state 41

   10 Blok: pocetak_token NizNaredbi kraj_token .

    $default  reduce using rule 10 (Blok)


state 42

   11 NizNaredbi: NizNaredbi ';' . Naredba1

    pocetak_token      shift, and go to state 1
    ispisi_token       shift, and go to state 7
    unesi_token        shift, and go to state 8
    za_token           shift, and go to state 9
    ponavljaj_token    shift, and go to state 10
    ako_token          shift, and go to state 11
    dok_token          shift, and go to state 12
    vrati_token        shift, and go to state 13
    num_token          shift, and go to state 14
    imeFunkcije_token  shift, and go to state 15
    id_token           shift, and go to state 16
    '\n'               shift, and go to state 17

    Blok      go to state 18
    Naredba1  go to state 73


state 43

    8 Deklaracija: imeFunkcije_token '(' . ')'
    9            | imeFunkcije_token '(' . nizParametara ')'

    id_token  shift, and go to state 74
    ')'       shift, and go to state 75

    nizParametara  go to state 76


state 44

    5 Funkcija1: funkcija_token Deklaracija Blok .

    $default  reduce using rule 5 (Funkcija1)


state 45

    1 Program: nizFunkcija Blok '.' .

    $default  reduce using rule 1 (Program)


state 46

    3 nizFunkcija: Funkcija1 ';' nizFunkcija .

    $default  reduce using rule 3 (nizFunkcija)


state 47

   14 Naredba1: ispisi_token '(' tekst_token . ')'

    ')'  shift, and go to state 77


state 48

   13 Naredba1: ispisi_token '(' AritmIzraz . ')'
   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz

    mod_token           shift, and go to state 56
    jednako_token       shift, and go to state 58
    '<'                 shift, and go to state 59
    '>'                 shift, and go to state 60
    veceJednako_token   shift, and go to state 61
    manjeJednako_token  shift, and go to state 62
    razlicito_token     shift, and go to state 63
    '+'                 shift, and go to state 64
    '-'                 shift, and go to state 65
    '*'                 shift, and go to state 66
    '/'                 shift, and go to state 67
    ')'                 shift, and go to state 78


state 49

   16 Naredba1: unesi_token '(' id_token . ')'

    ')'  shift, and go to state 79


state 50

   28 Inic: id_token . '=' AritmIzraz

    '='  shift, and go to state 80


state 51

   22 Naredba1: za_token '(' Inic . ';' AritmIzraz ';' Inic ')' Naredba1

    ';'  shift, and go to state 81


state 52

   21 Naredba1: ponavljaj_token ':' Naredba1 . dok_token AritmIzraz

    dok_token  shift, and go to state 82


state 53

   42 AritmIzraz: imeFunkcije_token '(' . ')'
   43           | imeFunkcije_token '(' . nizIzraza ')'

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35
    ')'                shift, and go to state 83

    AritmIzraz  go to state 70
    nizIzraza   go to state 84


state 54

   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   33           | '-' AritmIzraz .
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz

    $default  reduce using rule 33 (AritmIzraz)


state 55

   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz
   41           | '(' AritmIzraz . ')'

    mod_token           shift, and go to state 56
    jednako_token       shift, and go to state 58
    '<'                 shift, and go to state 59
    '>'                 shift, and go to state 60
    veceJednako_token   shift, and go to state 61
    manjeJednako_token  shift, and go to state 62
    razlicito_token     shift, and go to state 63
    '+'                 shift, and go to state 64
    '-'                 shift, and go to state 65
    '*'                 shift, and go to state 66
    '/'                 shift, and go to state 67
    ')'                 shift, and go to state 85


state 56

   34 AritmIzraz: AritmIzraz mod_token . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 86


state 57

   17 Naredba1: ako_token AritmIzraz onda_token . ':' Naredba1
   18         | ako_token AritmIzraz onda_token . ':' Naredba1 inace_token ':' Naredba1

    ':'  shift, and go to state 87


state 58

   37 AritmIzraz: AritmIzraz jednako_token . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 88


state 59

   35 AritmIzraz: AritmIzraz '<' . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 89


state 60

   36 AritmIzraz: AritmIzraz '>' . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 90


state 61

   39 AritmIzraz: AritmIzraz veceJednako_token . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 91


state 62

   40 AritmIzraz: AritmIzraz manjeJednako_token . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 92


state 63

   38 AritmIzraz: AritmIzraz razlicito_token . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 93


state 64

   29 AritmIzraz: AritmIzraz '+' . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 94


state 65

   30 AritmIzraz: AritmIzraz '-' . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 95


state 66

   31 AritmIzraz: AritmIzraz '*' . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 96


state 67

   32 AritmIzraz: AritmIzraz '/' . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 97


state 68

   20 Naredba1: dok_token AritmIzraz radi_token . ':' Naredba1

    ':'  shift, and go to state 98


state 69

   23 Naredba1: imeFunkcije_token '(' ')' .

    $default  reduce using rule 23 (Naredba1)


state 70

   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz
   47 nizIzraza: AritmIzraz .

    mod_token           shift, and go to state 56
    jednako_token       shift, and go to state 58
    '<'                 shift, and go to state 59
    '>'                 shift, and go to state 60
    veceJednako_token   shift, and go to state 61
    manjeJednako_token  shift, and go to state 62
    razlicito_token     shift, and go to state 63
    '+'                 shift, and go to state 64
    '-'                 shift, and go to state 65
    '*'                 shift, and go to state 66
    '/'                 shift, and go to state 67

    $default  reduce using rule 47 (nizIzraza)


state 71

   24 Naredba1: imeFunkcije_token '(' nizIzraza . ')'
   46 nizIzraza: nizIzraza . ',' AritmIzraz

    ','  shift, and go to state 99
    ')'  shift, and go to state 100


state 72

   15 Naredba1: id_token '=' AritmIzraz .
   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz

    mod_token           shift, and go to state 56
    jednako_token       shift, and go to state 58
    '<'                 shift, and go to state 59
    '>'                 shift, and go to state 60
    veceJednako_token   shift, and go to state 61
    manjeJednako_token  shift, and go to state 62
    razlicito_token     shift, and go to state 63
    '+'                 shift, and go to state 64
    '-'                 shift, and go to state 65
    '*'                 shift, and go to state 66
    '/'                 shift, and go to state 67

    $default  reduce using rule 15 (Naredba1)


state 73

   11 NizNaredbi: NizNaredbi ';' Naredba1 .

    $default  reduce using rule 11 (NizNaredbi)


state 74

    7 nizParametara: id_token .

    $default  reduce using rule 7 (nizParametara)


state 75

    8 Deklaracija: imeFunkcije_token '(' ')' .

    $default  reduce using rule 8 (Deklaracija)


state 76

    6 nizParametara: nizParametara . ',' id_token
    9 Deklaracija: imeFunkcije_token '(' nizParametara . ')'

    ','  shift, and go to state 101
    ')'  shift, and go to state 102


state 77

   14 Naredba1: ispisi_token '(' tekst_token ')' .

    $default  reduce using rule 14 (Naredba1)


state 78

   13 Naredba1: ispisi_token '(' AritmIzraz ')' .

    $default  reduce using rule 13 (Naredba1)


state 79

   16 Naredba1: unesi_token '(' id_token ')' .

    $default  reduce using rule 16 (Naredba1)


state 80

   28 Inic: id_token '=' . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 103


state 81

   22 Naredba1: za_token '(' Inic ';' . AritmIzraz ';' Inic ')' Naredba1

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 104


state 82

   21 Naredba1: ponavljaj_token ':' Naredba1 dok_token . AritmIzraz

    num_token          shift, and go to state 31
    imeFunkcije_token  shift, and go to state 32
    id_token           shift, and go to state 33
    '-'                shift, and go to state 34
    '('                shift, and go to state 35

    AritmIzraz  go to state 105


state 83

   42 AritmIzraz: imeFunkcije_token '(' ')' .

    $default  reduce using rule 42 (AritmIzraz)


state 84

   43 AritmIzraz: imeFunkcije_token '(' nizIzraza . ')'
   46 nizIzraza: nizIzraza . ',' AritmIzraz

    ','  shift, and go to state 99
    ')'  shift, and go to state 106


state 85

   41 AritmIzraz: '(' AritmIzraz ')' .

    $default  reduce using rule 41 (AritmIzraz)


state 86

   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   34           | AritmIzraz mod_token AritmIzraz .
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz

    $default  reduce using rule 34 (AritmIzraz)


state 87

   17 Naredba1: ako_token AritmIzraz onda_token ':' . Naredba1
   18         | ako_token AritmIzraz onda_token ':' . Naredba1 inace_token ':' Naredba1

    pocetak_token      shift, and go to state 1
    ispisi_token       shift, and go to state 7
    unesi_token        shift, and go to state 8
    za_token           shift, and go to state 9
    ponavljaj_token    shift, and go to state 10
    ako_token          shift, and go to state 11
    dok_token          shift, and go to state 12
    vrati_token        shift, and go to state 13
    num_token          shift, and go to state 14
    imeFunkcije_token  shift, and go to state 15
    id_token           shift, and go to state 16
    '\n'               shift, and go to state 17

    Blok      go to state 18
    Naredba1  go to state 107


state 88

   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   37           | AritmIzraz jednako_token AritmIzraz .
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz

    mod_token  shift, and go to state 56
    '+'        shift, and go to state 64
    '-'        shift, and go to state 65
    '*'        shift, and go to state 66
    '/'        shift, and go to state 67

    $default  reduce using rule 37 (AritmIzraz)


state 89

   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   35           | AritmIzraz '<' AritmIzraz .
   36           | AritmIzraz . '>' AritmIzraz
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz

    mod_token  shift, and go to state 56
    '+'        shift, and go to state 64
    '-'        shift, and go to state 65
    '*'        shift, and go to state 66
    '/'        shift, and go to state 67

    $default  reduce using rule 35 (AritmIzraz)


state 90

   29 AritmIzraz: AritmIzraz . '+' AritmIzraz
   30           | AritmIzraz . '-' AritmIzraz
   31           | AritmIzraz . '*' AritmIzraz
   32           | AritmIzraz . '/' AritmIzraz
   34           | AritmIzraz . mod_token AritmIzraz
   35           | AritmIzraz . '<' AritmIzraz
   36           | AritmIzraz . '>' AritmIzraz
   36           | AritmIzraz '>' AritmIzraz .
   37           | AritmIzraz . jednako_token AritmIzraz
   38           | AritmIzraz . razlicito_token AritmIzraz
   39           | AritmIzraz . veceJednako_token AritmIzraz
   40           | AritmIzraz . manjeJednako_token AritmIzraz
